# solitaire

./: README.md  cabal.project  miso-solitaire.cabal
src/: Main.hs
static/: index.html
