cabal-version:          3.0
name:                   miso-solitaire
version:                0.1

executable app
  if arch(wasm32)
    cpp-options:
      -DWASM
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base, containers, miso, mtl
  default-language:     GHC2021
  default-extensions:   CPP TemplateHaskell
 
